--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
         <div class="award">
             <img src="https://images.hindustantimes.com/rf/image_size_640x362/HT/p1/2015/07/28/Incoming/Pictures/1373846_Wallpaper2.jpg">
             <div class="award-text">
-                <p> Bharat Ratna in 1997</p>
+                <p> Bharat Ratna </p>
+                <p>in 1997</p>
 
             </div>
         </div>
