--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
     </div>
 </section>
-<h3>If you have time, you should definitely read this incredible human being's autobiography</h3>
+<marquee direction="left" scrollamount="10"><h3>This Website is made for educational purpose. All the information is taken from web. For any dispute contact <a href="http://wa.me/+919494767614/">Me</h3></marquee>
 <!--footer-->
 <footer>
     <span>Created By <a href="https://www.linkedin.com/in/padala-sai-midhun-reddy/">Midhun Reddy</a></span>
