--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
     </div>
 </section>
-<p>A small clip that made me explore my life</p>
+<p>Words that inspired me</p>
 <div class="video">
 <iframe width="400" height="450" src="https://www.youtube.com/embed/1cWLDu6BDak" title="Be you not everybody else! #apjabdulkalam #shorts #beyourself" frameborder="0" allow="autoplay ; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
