--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </ul>
 </section>
 <!--awards section-->
-<!--<section id="awards">
+<section id="awards">
     <h2>Awards</h2>
     <div id="row">
         <div class="award">
@@ -174,11 +174,11 @@
     </div>
 </section>
 <p>Words that inspired me</p>
-<div class="video">
+<!--<div class="video">
 <iframe width="400" height="450" src="https://www.youtube.com/embed/1cWLDu6BDak" title="Be you not everybody else! #apjabdulkalam #shorts #beyourself" frameborder="0" allow="autoplay ; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+</div>-->
 <marquee direction="left" scrollamount="10"><h3>This Website is made for educational purpose. All the information is taken from web. For disputes contact </h3></marquee>
--->
+
 <!--footer-->
 <footer>
     <span>Created By <a href="https://www.linkedin.com/in/padala-sai-midhun-reddy/">Midhun Reddy</a> </span>
