--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-
     <nav id="myNav" class="overlay">
-
         <div class="overlay-content">
-
             <a href="#timeline">Timeline</a>
             <a href="#awards">Awards</a>
         </div>
@@ -173,10 +170,12 @@
         </div>
     </div>
 </section>
-<p>Words that inspired me</p>
-<!--<div class="video">
+
+<div class="video">
+<p>Lines that blew me away</p>
+<br>
 <iframe width="400" height="450" src="https://www.youtube.com/embed/1cWLDu6BDak" title="Be you not everybody else! #apjabdulkalam #shorts #beyourself" frameborder="0" allow="autoplay ; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>-->
+</div>
 <marquee direction="left" scrollamount="10"><h3>This Website is made for educational purpose. All the information is taken from web. For disputes contact </h3></marquee>
 
 <!--footer-->
