--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <div class="video">
 <p>Lines that blew me away</p>
 <br>
-<iframe width="350" height="400" src="https://www.youtube.com/embed/1cWLDu6BDak" title="Be you not everybody else! #apjabdulkalam #shorts #beyourself" frameborder="0" allow="autoplay ; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="400" height="450" src="https://www.youtube.com/embed/AJCIIljcxUc" title="Noble lines by Dr. APJ ABDUL KALAM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <marquee direction="left" scrollamount="10"><h3>This Website is made for educational purpose. All the information is taken from web. For disputes contact </h3></marquee>
 
