--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <br>
 <iframe width="400" height="450" src="https://www.youtube.com/embed/AJCIIljcxUc" title="Noble lines by Dr. APJ ABDUL KALAM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<marquee direction="left" scrollamount="10"><h3>This Website is made for educational purpose. All the information is taken from web. For disputes contact </h3></marquee>
+<marquee direction="left" scrollamount="10"><h3>This Website is made for educational purpose. All the information is taken from web. For any disputes do contact me</h3></marquee>
 
 <!--footer-->
 <footer>
